internal/kgateway/setup/testdata/ai-model-failover.yaml
kind: Gateway
apiVersion: gateway.networking.k8s.io/v1
metadata:
  name: http-gw-for-test
  namespace: gwtest
spec:
  gatewayClassName: kgateway
  listeners:
    - protocol: HTTP
      port: 8080
      name: http
      allowedRoutes:
        namespaces:
          from: All
---
apiVersion: gateway.kgateway.dev/v1alpha1
kind: Backend
metadata:
  labels:
    app: kgateway
  name: openai
  namespace: gwtest
spec:
  type: AI
  ai:
    multipool:
      priorities:
        - pool:
            - provider:
                openai:
                  authToken:
                    kind: SecretRef
                    secretRef:
                      name: openai-secret
                  model: gpt-4o
        - pool:
            - provider:
                openai:
                  authToken:
                    kind: SecretRef
                    secretRef:
                      name: openai-secret
                  model: gpt-4.0-turbo
        - pool:
            - provider:
                openai:
                  authToken:
                    kind: SecretRef
                    secretRef:
                      name: openai-secret
                  model: gpt-3.5-turbo
---
apiVersion: v1
kind: Secret
metadata:
  name: openai-secret
  namespace: gwtest
type: Opaque
data:
  Authorization: bXlzZWNyZXRrZXk=
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: route-to-backend
  namespace: gwtest
spec:
  parentRefs:
    - name: http-gw-for-test
  hostnames:
    - "test"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /openai
      backendRefs:
        - name: openai
          kind: Backend
          group: gateway.kgateway.dev
